--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,13 +1,6 @@
-# This is a basic workflow that is manually triggered
+name: Build Gn
 
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
-on:
-  workflow_dispatch:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
+on: workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
