--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -45,3 +45,14 @@ jobs:
             cp out/gn /artifacts/
             echo "Produced Gn at /artifacts/"
 
+      - name: Upload release to GitHub
+        uses: softprops/action-gh-release@v1
+        if: |
+          github.repository == 'johndie005/cuddly-guacamole' &&
+          startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: |
+            ${PWD}/artifacts/gn
+          draft: true
