--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,7 +39,7 @@ jobs:
           # no secrets are present in the container state or logs.
           install: |
             apt update -y
-            apt install git build-essential -y
+            apt install git python ninja build-essential -y
 
           # Produce a binary artifact and place it in the mounted volume
           run: |
