--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -1,6 +1,9 @@
 name: Build Gn
 
 on:
+  schedule:
+     -cron: "* * 1 * *"
+  
   release:
     types: [published]
 
@@ -58,14 +61,12 @@ jobs:
           zip -r artifacts/gn.zip artifacts/gn
           ls -l artifacts/gn.zip
 
-      - name: Upload release to GitHub
-        uses: softprops/action-gh-release@v1
-        if: |
-          github.repository == 'johndie005/cuddly-guacamole' &&
-          startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Gn Build"
           files: |
-            artifacts/gn.zip
+            gn.zip
           draft: true
