--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: true
+          prerelease: false
           title: "Gn Build"
           files: |
             artifacts/gn.zip
